RESOLVED FIXED285669
[iOS] Removal of voice activity listener is failing
https://bugs.webkit.org/show_bug.cgi?id=285669
Summary [iOS] Removal of voice activity listener is failing
youenn fablet
Reported 2025-01-09 03:59:01 PST
[iOS] Removal of voice activity listener is failing
Attachments
Radar WebKit Bug Importer
Comment 1 2025-01-09 03:59:26 PST
youenn fablet
Comment 2 2025-01-09 04:02:25 PST
EWS
Comment 3 2025-01-10 06:31:03 PST
Committed 288704@main (ce39bf8bcfd9): <https://commits.webkit.org/288704@main> Reviewed commits have been landed. Closing PR #38777 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.