[iOS] Removal of voice activity listener is failing https://bugs.webkit.org/show_bug.cgi?id=285669 rdar://problem/142610141

Reviewed by Eric Carlson.

We need to pass 0 as value size when passing nullptr.

* Source/WebCore/platform/mediastream/mac/CoreAudioSharedUnit.mm:
(WebCore::CoreAudioSharedInternalUnit::setVoiceActivityDetection):

Canonical link: https://commits.webkit.org/288704@main